// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextArea Text Area Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <textarea
                className="css-ybcei0"
                cols={10}
                placeholder="Label"
                required={false}
                rows={10}
                styleType="outlined"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <textarea
                className="css-ybcei0"
                cols={35}
                placeholder="Label"
                required={false}
                rows={20}
                styleType="outlined"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea Text Area Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-hzcvm6-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <textarea
                className="css-ybcei0"
                placeholder="placeholder here"
                required={false}
                styleType="filled"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <textarea
                className="css-ybcei0"
                placeholder="placeholder here"
                required={false}
                styleType="outlined"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-15ow8ps-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <textarea
                className="css-ybcei0"
                placeholder="placeholder here"
                required={false}
                styleType="elevated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea Text Area with KNOBS 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-hzcvm6-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <textarea
                className="css-ybcei0"
                disabled={false}
                hintMsg="Hint in Text Area"
                placeholder="Label"
                required={false}
                status="normal"
                styleType="filled"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea TextArea disabled with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-v1ceom-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <textarea
                className="css-ybcei0"
                disabled={true}
                placeholder="Label"
                required={false}
                styleType="filled"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-416u9w-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <textarea
                className="css-ybcei0"
                disabled={true}
                placeholder="Label"
                required={false}
                styleType="outlined"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-1oveast-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <textarea
                className="css-ybcei0"
                disabled={true}
                placeholder="Label"
                required={false}
                styleType="elevated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea TextArea with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-lsujln-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <textarea
                    className="css-ybcei0"
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="error"
                    styleType="filled"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-y2q41j-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-1xeanin-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <textarea
                    className="css-ybcei0"
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="error"
                    styleType="outlined"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-y2q41j-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-u1rsfx-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <textarea
                    className="css-ybcei0"
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="error"
                    styleType="elevated"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-y2q41j-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Area
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-hzcvm6-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <textarea
                    className="css-ybcei0"
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="hint"
                    styleType="filled"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-lxhvoy-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-xp95x8-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <textarea
                    className="css-ybcei0"
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="hint"
                    styleType="outlined"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-lxhvoy-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-15ow8ps-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <textarea
                    className="css-ybcei0"
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="hint"
                    styleType="elevated"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-lxhvoy-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Area
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
